重构小部分代码，添加默认模型生成